apps/qbittorrent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qbittorrent
  labels:
    gateway-access: qbittorrent
