apps/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-nox
  namespace: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent-nox
  template:
    metadata:
      labels:
        app: qbittorrent-nox
    spec:
      nodeSelector:
        affected_vlan: "50"
      containers:
      - name: gluetun
        image: qmcgaw/gluetun:v3.41.3@sha256:fa19cc76b2af13d57a8d3dc3066f2ada061b1c761b8aecf989b3877c0486e027
        securityContext:
          privileged: true
          capabilities:
            add: ["NET_ADMIN"]
          readOnlyRootFilesystem: false 
        volumeMounts:
          - name: tun
            mountPath: /dev/net/tun
        ports:
        - name: webui
          containerPort: 8080 
        - name: torrent-tcp
          containerPort: 6881
        - name: torrent-udp
          containerPort: 6881
      - name: qbittorrent
        image: qbittorrentofficial/qbittorrent-nox:5.2.4-1@sha256:92bfd78d731e254ba64f62b77b0696add6447a33642ee5feda106a26b285aa7f
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 3104
          runAsGroup: 3100
        volumeMounts:
        - name: config
          mountPath: /config
        - name: torrents
          mountPath: /torrents
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config-pvc
      - name: torrents
        persistentVolumeClaim:
          claimName: torrents-pvc
      - name: tun
        hostPath:
          path: /dev/net/tun
