apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-webui
spec:
  selector:
    app: qbittorrent-nox
  ports:
  - port: 8080
