apps/qbittorrent/route.yaml
# apps/qbittorrent/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-route
  namespace: qbittorrent
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway
      sectionName: qbittorrent-https     # Attach to the HTTPS listener
  hostnames:
    - "qbittorrent.hoareau-marion.eu"
  rules:
    - backendRefs:
        - name: qbittorrent-webui
          port: 8080
